Version 2.0.16 release (2014/09/23)
-------------------------------------------

New button from Infobook displays directly the list with students if 
there is only one community and for the current year only displays 
the current students.


Version 2.0.15 release (2014/09/09)
-------------------------------------------

Fix to checking columns in completed registers list for IE.

Get the week days in transport_display simplified.

Fix for last update time for completed registers.

Registers notices can be displayed now.

Capslock message is shown only once and for the password.

Added missing jquery link for report comments writer.

Reloads iframe clicking on ClassIS logo.

Fix to report comments checksids.

Checksids action generalised for different form names.


Version 2.0.14 release (2014/08/29)
-------------------------------------------

Fix for Transport editor and Attendance editor modals.

Fix for default view in Infobook student list.

Added size parameter for staff profile pictures.

Added version number to book.js file to avoid caching.

Temporarily thanks modal set to not be displayed after login.


Version 2.0.13 release (2014/08/21)
-------------------------------------------

Fix for updating profile assessments on roll-over.

Fix for photo caching compatibility with Internet Explorer 7.

Added attendance table and page for staff.

Fix for slow completed registers page.

Added the option to export a not paid fees list by yeargroup.

Added frame content printer again, this time opens in a modal.


Version 2.0.12 release (2014/08/08)
-------------------------------------------

Enabled login for both, email and username.

Added sorting by date for table sort plugin.

Includes for schoolarrays.php changed to full path.

User from Staff list clickable only with correct permissions.

Fix for submitting forms in Safari.

Fix for adding column in Infobook student_list.


Version 2.0.11 release (2014/07/14)
-------------------------------------------
