@@ -1,8 +1,10 @@
 Version 2.0.16 release (2014/09/23)
 -------------------------------------------
 
-New button from Infobook displays directly the list with students if 
-there is only one community and for the current year only displays 
+Link added to New enrolments last year's total to view the students.
+
+New button from Infobook displays directly the list with students 
+if there is only one community and for the current year only displays 
 the current students.
 
 
